--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,vue,json,css,scss,md}\""
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,vue,json,css,scss,md}\"",
+    "lint": "eslint \"src/**/*.{js,ts,vue}\" --fix",
+    "prepare": "husky"
   },
   "dependencies": {
     "vue": "^3.5.13"
@@ -16,8 +18,14 @@
     "@types/node": "^22.10.5",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
+    "eslint": "^9.17.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-vue": "^9.32.0",
+    "globals": "^15.14.0",
+    "husky": "^9.1.7",
     "prettier": "3.4.2",
     "typescript": "~5.6.2",
+    "typescript-eslint": "^8.19.1",
     "vite": "^6.0.5",
     "vue-tsc": "^2.2.0"
   }
